# aim_bot_study

./: .gitignore  AGENT.md  README.md  TRACKING.md  complete_autoaim.py  config.toml.example  controller.py  export_trt.py  gamepad_debug.bat  gamepad_native_debug.bat  gamepad_start.bat  main.py  mouse_native_debug.bat  mouse_start.bat  recoil_app_start.bat  recoil_toolkit.bat  requirements.txt  start.bat  test.py  test_listener.py  vision.py
.agent-context/: handoff.md  session-log-full.md  session-log.md
.claude/: settings.local.json
config/: __init__.py  loader.py
controllers/: __init__.py  base_controller.py  gamepad_controller.py  kbm_controller.py  mouse_controller.py
controllers/gamepad/: __init__.py  adaptive_delta_gain.py  (+12 more)
native/vision_native/: CMakeLists.txt
native/vision_native/include/vision_native/: aim_enhancement.h  body_state_tracker.h  center_cue_refiner.h  dxgi_capture.h  ego_motion.h  engine_io.h  gray_frame.h  preprocess.h  target_selector.h  tensorrt_engine.h  tensorrt_inspector.h  types.h  vision_engine.h
native/vision_native/src/: aim_enhancement.cpp  body_state_tracker.cpp  center_cue_refiner.cpp  color_utils.h  dxgi_capture.cpp  ego_motion.cpp  engine_io.cpp  image_ops.h  preprocess.cu  target_selector.cpp  tensorrt_engine.cpp  tensorrt_inspector.cpp  trt_smoke_main.cpp  vision_debug_main.cpp  vision_engine.cpp  vision_native_module.cpp
recoil_app/: __init__.py  __main__.py  console.py  runtime.py
tests/: test_config_loader.py  test_gamepad_aim_math.py  test_gamepad_horizontal_assist.py  test_main_cli.py  test_native_vision_body_state_bridge.py  test_native_vision_enhancement_bridge.py  test_native_vision_image_ops_bridge.py  test_native_vision_runner.py  test_native_vision_scaffold.py  test_native_vision_synthetic_parity.py  test_native_vision_targeting_bridge.py  test_performance_tracker.py  test_person_training_tools.py  test_startup_scripts.py  test_vision_capture.py  test_vision_debug_capture.py  test_vision_debug_overlay.py  test_vision_enhancement.py  test_vision_fastpath.py  test_vision_inference.py  test_vision_occlusion_compensation.py  test_vision_runner.py  test_vision_runner_autofire_gate.py  test_vision_runner_config.py  test_vision_targeting.py  test_yellow_cue.py
tools/: build_native_vision.ps1  export_person_detector.py  export_trt.py  guaji.py  prepare_person_dataset.py  recoil_collector.py  recoil_runtime_launcher.py  recoil_toolkit_console.py  run_gamepad_benchmark.py  run_mouse_benchmark.py  run_native_vision_capture_smoke.ps1  run_native_vision_debug.ps1  run_native_vision_infer_smoke.ps1  run_native_vision_smoke.ps1  train_person_detector.py  weapon_recognizer.py  weapon_signature_capture.py
training/: __init__.py  person_dataset.py
vision/: __init__.py  capture.py  debug_capture.py  debug_overlay.py  dxgi_capture.py  enhancement.py  fastpath.py  inference.py  native_fastpath.py  native_runner.py  occlusion_compensation.py  perf.py  runner.py  targeting.py  yellow_cue.py
(+175 files in other folders)
